--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,23 +31,17 @@ body {
 }
 
 .alert-error {
-    width: 100%;
-    padding: 0.6rem 0;
+    width: 22rem;
+    padding: 0.6rem;
     margin-bottom: 1.6rem;
     text-align: center;
     color: white;
     background-color: blueviolet;
     border-radius: 0.6rem;
+    transition: .3s;
 }
 
-.p-question {
-    width: 100%;
-    padding: 1rem;
-    color: blueviolet;
-    text-align: center;
-}
-
-main {
+#main-app {
     width: fit-content;
     height: fit-content;
     padding: 3rem;
@@ -84,4 +78,57 @@ select {
     height: 2.6rem;
     display: flex;
     justify-content: center;
+}
+
+.p-question {
+    width: 22rem;
+    padding: 1rem;
+    color: blueviolet;
+    text-align: center;
+}
+
+#answers {
+    width: 22rem;
+    padding: 1rem;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.answers__item {
+    height: fit-content;
+    display: flex;
+    padding: 3rem;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    background-color: blueviolet;
+    border-radius: 0.6rem;
+    transition: .2s;
+}
+
+.answers-item:hover {
+    padding: 2.8rem;
+    color: blueviolet;
+    background-color: transparent;
+    border: 0.1rem solid blueviolet;
+    transition: .2s;
+}
+
+.stats {
+    width: 22rem;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: blueviolet;
+}
+
+.stats__score {
+    padding: 0.3rem 0.6rem;
+    color: white;
+    background-color: blueviolet;
+    border-radius: 0.6rem;
 }
